--- a/FUApi/appsettings.json
+++ b/FUApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": "Server = localhost; Port = 5432; Database = FileUploadDapperDemoDb; User Id = postgres; Password = masik00787737;"
+  }
 }
